fixed scrollbar issue

--- a/css_comp.css
+++ b/css_comp.css
@@ -31,8 +31,7 @@ body::-webkit-scrollbar-thumb {
 }
 
 .sidebar_container::-webkit-scrollbar {
-  width: 3 px;
-  z-index: -1;
+  width: 3px;
 }
 
 .sidebar_container::-webkit-scrollbar-track {
@@ -44,6 +43,9 @@ body::-webkit-scrollbar-thumb {
 }
 
 @media (max-width: 1240px) {
+  .sidebar_container::-webkit-scrollbar {
+    height: 3px;
+  }
   .banner_container {
     font-size: 300% !important;
     display: flex !important;
@@ -68,7 +70,8 @@ body::-webkit-scrollbar-thumb {
     width: auto;
     overflow-x: auto;
     height: 2rem;
-    padding: 1.5rem;
+    padding: 0.5rem;
+    box-sizing: content-box;
   }
   .generic_container {
     padding: 1rem;
@@ -91,81 +94,81 @@ body::-webkit-scrollbar-thumb {
   }
 }
 
-._6_2{justify-content:flex-end;}
-._6_1{justify-content:center;}
+._16_1{padding:0.5rem 0rem;}
+._16_4{padding:0rem 5px;}
+._16_2{padding:1rem;}
+._16_3{padding:1rem 0rem;}
+._16_5{padding:0rem 8rem;}
+._28_1{flex-shrink:0;}
+._33_1{text-align:center;}
+._23_1{top:0px;}
+._21_1{transition:400ms border ease;}
+._21_2{transition:background 200ms ease;}
+._26_1{gap:2rem;}
 ._20_1{border-bottom:2px solid rgba(0, 0, 0, 0);}
-._5_6{width:8rem;}
-._5_5{width:42rem;}
-._5_4{width:100%;}
-._5_3{width:49rem;}
-._5_2{width:100vw;}
-._5_1{width:45rem;}
-._5_8{width:20rem;}
-._5_7{width:;}
-._31_1{text-decoration:underline;}
-._8_1{border-radius:6px;}
-._14_1{margin-top:5rem;}
-._0_1{background-image:url();}
+._9_5{width:42rem;}
+._9_6{width:8rem;}
+._9_1{width:45rem;}
+._9_4{width:100%;}
+._9_8{width:20rem;}
+._9_7{width:;}
+._9_2{width:100vw;}
+._9_3{width:49rem;}
+._14_3{box-shadow:0px 0px 30px rgba(0, 0, 0, 0.3);}
+._14_1{box-shadow:inset 0px 0px 10px rgba(0, 0, 0, 0.8);}
+._14_2{box-shadow:inset 0px 0px 10px rgba(0, 0, 0, 0.4);}
+._22_2{position:relative !important;}
+._22_1{position:fixed;}
+._22_3{position:absolute;}
+._24_1{border-top:2px solid rgba(249, 194, 60);}
+._27_1{z-index:101;}
+._29_1{word-wrap:break-word;}
+._32_1{font-family:Courier, monospace;}
+._2_5{font-size:1rem;}
+._2_2{font-size:1.5rem;}
+._2_1{font-size:6rem;}
+._2_3{font-size:1.1rem;}
+._2_4{font-size:2rem;}
+._17_1{flex-direction:column;}
+._13_1{background-size:cover;}
+._15_2{background-color:rgb(44, 40, 38);}
+._15_3{background-color:rgba(30, 27, 27, 0.8);}
+._15_4{background-color:rgb(30, 30, 30);}
+._15_1{background-color:none;}
+._36_1{padding-top:4rem;}
+._11_1{background:url("images/site_background.png");}
+._4_1{color:rgb(160,160,160);}
+._30_1{text-decoration-color:rgb(249, 194, 60) !important;}
+._38_1{margin-left:20rem;}
+._35_2{border-right:2px solid rgb(44, 40, 38);}
+._35_1{border-right:1px solid rgb(249, 194, 60);}
+._18_3{margin:1rem !important;}
+._18_1{margin:1rem;}
+._18_2{margin:2rem;}
+._39_1{box-sizing:border-box;}
+._34_1{margin-bottom:3rem;}
+._37_1{overflow-y:scroll;}
+._8_1{background-repeat:no-repeat;}
+._7_1{justify-content:center;}
+._7_2{justify-content:flex-end;}
+._10_1{text-shadow:0px 0px 10px rgba(0, 0, 0, 1);}
+._25_1{backdrop-filter:blur(8px);}
+._3_2{display: flex;}
+._3_1{display:flex;}
 ._0_4{background-image:url(images/routing_management.png);}
 ._0_3{background-image:url(images/component_based.png);}
+._0_1{background-image:url();}
 ._0_2{background-image:url(images/css_code.png);}
-._7_3{height:8rem;}
-._7_6{height:95vh;}
-._7_4{height:4rem;}
-._7_2{height:20rem;}
-._7_7{height:88vh;}
-._7_5{height:auto !important;}
-._7_1{height:27rem;}
-._7_8{height:100%;}
-._3_1{text-shadow:0px 0px 10px rgba(0, 0, 0, 1);}
+._5_1{align-items:center;}
+._6_1{height:27rem;}
+._6_3{height:8rem;}
+._6_5{height:auto !important;}
+._6_6{height:95vh;}
+._6_8{height:100%;}
+._6_4{height:4rem;}
+._6_7{height:88vh;}
+._6_2{height:20rem;}
+._12_1{margin-top:5rem;}
 ._19_1{cursor:pointer;}
-._17_1{flex-direction:column;}
-._21_2{transition:background 200ms ease;}
-._21_1{transition:400ms border ease;}
-._25_1{position:fixed;}
-._25_2{position:relative !important;}
-._25_3{position:absolute;}
-._11_1{background:url("images/site_background.png");}
-._30_1{text-decoration-color:rgb(249, 194, 60) !important;}
-._15_3{padding:1rem 0rem;}
-._15_1{padding:0.5rem 0rem;}
-._15_2{padding:1rem;}
-._15_4{padding:0rem 5px;}
-._15_5{padding:0rem 8rem;}
-._26_1{backdrop-filter:blur(8px);}
-._16_1{background-color:none;}
-._16_2{background-color:rgb(44, 40, 38);}
-._16_3{background-color:rgba(30, 27, 27, 0.8);}
-._16_4{background-color:rgb(30, 30, 30);}
-._38_1{box-sizing:border-box;}
-._24_1{gap:2rem;}
-._35_1{border-right:1px solid rgb(249, 194, 60);}
-._35_2{border-right:2px solid rgb(44, 40, 38);}
-._39_1{margin-left:20rem;}
-._9_2{display: flex;}
-._9_1{display:flex;}
-._37_1{overflow-y:scroll;}
-._36_1{padding-top:4rem;}
-._29_1{word-wrap:break-word;}
-._2_1{align-items:center;}
-._4_1{background-repeat:no-repeat;}
-._33_1{text-align:center;}
-._32_1{font-family:Courier, monospace;}
-._13_1{box-shadow:inset 0px 0px 10px rgba(0, 0, 0, 0.8);}
-._13_2{box-shadow:inset 0px 0px 10px rgba(0, 0, 0, 0.4);}
-._13_3{box-shadow:0px 0px 30px rgba(0, 0, 0, 0.3);}
-._23_1{z-index:101;}
-._12_1{background-size:cover;}
-._10_1{color:rgb(160,160,160);}
-._18_2{margin:2rem;}
-._18_1{margin:1rem;}
-._18_3{margin:1rem !important;}
-._34_1{margin-bottom:3rem;}
-._28_1{flex-shrink:0;}
-._22_1{top:0px;}
-._1_5{font-size:1rem;}
-._1_2{font-size:1.5rem;}
-._1_4{font-size:2rem;}
-._1_3{font-size:1.1rem;}
-._1_1{font-size:6rem;}
-._27_1{border-top:2px solid rgba(249, 194, 60);}
+._1_1{border-radius:6px;}
+._31_1{text-decoration:underline;}
